--- a/B1.md
+++ b/B1.md
@@ -1,3 +1,8 @@
 ## 參考資料
 1. shortcut - [網址](https://www.youtube.com/watch?v=4jB8bIqBXCY)
+   + ctrl E 到第一行
+   + 設定快速鍵的功能搜尋
+   + 設定F2為切換營運中心
+   + Tab為開窗
+   + Ctrl Enter確認
 2. 
