--- a/B1.md
+++ b/B1.md
@@ -5,4 +5,8 @@
    + 設定F2為切換營運中心
    + Tab為開窗
    + Ctrl Enter確認
+   + Ctrl I 新增一行
+   + Ctrl M 複製一行
+   + Ctrl H 到第一行  E到最後一行
+   + Ctrl K 刪除行
 2. 
