--- a/B1.md
+++ b/B1.md
@@ -14,5 +14,6 @@
    +  折讓會自動沖帳，並且已經產生到應收的，只能在應收進行沖帳
    +  如果有退貨，會產生淨額的應收。
    +  3702-44 - 物料清單上的WIP科目
+   +  MRP預測要設定小的日。
 3. 網址教學
    + 敦緯數位 - [網址](https://www.youtube.com/@sapbusinessone1981/videos)
