--- a/B1.md
+++ b/B1.md
@@ -15,5 +15,9 @@
    +  如果有退貨，會產生淨額的應收。
    +  3702-44 - 物料清單上的WIP科目
    +  MRP預測要設定小的日。
-3. 網址教學
+3. 流程紀錄
+   + 拆解單會有成本差異。
+   + 成本結算很像根據工單的分配為主，如果有差異才會處理，要多測試。
+   + 
+4. 網址教學
    + 敦緯數位 - [網址](https://www.youtube.com/@sapbusinessone1981/videos)
