--- a/B1.md
+++ b/B1.md
@@ -18,6 +18,6 @@
 3. 流程紀錄
    + 拆解單會有成本差異。
    + 成本結算很像根據工單的分配為主，如果有差異才會處理，要多測試。
-   + 
+   + 委外工單要用資源處理，但是請款流程會斷掉，如用資源無法使用採購文件拋轉。
 4. 網址教學
    + 敦緯數位 - [網址](https://www.youtube.com/@sapbusinessone1981/videos)
