--- a/B1.md
+++ b/B1.md
@@ -20,4 +20,7 @@
    + 成本結算很像根據工單的分配為主，如果有差異才會處理，要多測試。
    + 委外工單要用資源處理，但是請款流程會斷掉，如用資源無法使用採購文件拋轉。
 4. 網址教學
-   + 敦緯數位 - [網址](https://www.youtube.com/@sapbusinessone1981/videos)
+   + [功能]敦緯數位 - [網址](https://www.youtube.com/@sapbusinessone1981/videos)
+   + [功能]How to improve Credit Control processes in SAP Business One - [網址](https://www.youtube.com/watch?v=NLykW7bg-Ao)
+   + [功能]How to Create an SAP Business One Alert from a Saved Query - [網址](https://www.youtube.com/watch?v=H1SdVrQhZLc)
+   + [整體]SAP Business One Messages and Alerts - [網址](https://www.youtube.com/watch?v=zrv0li49tZQ)
