--- a/B1.md
+++ b/B1.md
@@ -24,4 +24,5 @@
    + [功能]How to improve Credit Control processes in SAP Business One - [網址](https://www.youtube.com/watch?v=NLykW7bg-Ao)
    + [功能]How to Create an SAP Business One Alert from a Saved Query - [網址](https://www.youtube.com/watch?v=H1SdVrQhZLc)
    + Tips and Tricks on writing SQL for B1 Validation Configurations - [網址](https://www.youtube.com/watch?v=gPNiVOCy_k8)
+   + How to improve Credit Control processes in SAP Business One - [網址](https://www.youtube.com/watch?v=NLykW7bg-Ao)
    + [整體]SAP Business One Messages and Alerts - [網址](https://www.youtube.com/watch?v=zrv0li49tZQ)
